# CpuRayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
math/: common.h  matrix.h  vector.h
resource/: moon-1024-512-rgb24.raw
src/: BoundingBox.cpp  BoundingBox.h  Common.h  HitRecord.h  Material.h  MathUtils.cpp  MathUtils.h  Matrix.cpp  Matrix.h  MatrixUtils.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Rasterer.cpp  Rasterer.h  Ray.h  Rect.h  Scene.cpp  Scene.h  Size.h  Sphere.cpp  Sphere.h  Surface.h  Texture2D.cpp  Texture2D.h  Triangle.cpp  Triangle.h  Vector.h
test/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
